welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: '<-' expected but ')' found.
  for (cpt <=(getMondeLargeur())) {
                                ^Array1:6: error: illegal start of simple expression
}
^